build system: Switch to mate-common.

--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,7 @@ Build-Depends: debhelper (>= 9),
                dbus-test-runner,
                xvfb,
                valac,
+               mate-common,
                mono-devel (>= 2.4.3) [!arm64 !ppc64el],
                libglib2.0-dev (>= 2.35.4),
                libgtk-3-dev (>= 2.91.3),
