AppIndicator: fix icon and theme paths when running in $SNAP environment
 Prepend $SNAP path to icons and theme paths when running in a sandboxed
 environment, this allows to run app indicators without caring about the fact
 they've been designed or compiled to run in a snap world or not. (LP: #1600136)

--- a/configure.ac
+++ b/configure.ac
@@ -123,7 +123,7 @@ if test "x$has_mono" = "xtrue" ; then
       RUNTIME=mono
    fi
 
-   AC_PATH_PROG(CSC, gmcs, no)
+   AC_PATH_PROG(CSC, mono-csc, no)
    LIB_PREFIX=.so
    LIB_SUFFIX=
 fi
