--- a/debian/control
+++ b/debian/control
@@ -7,24 +7,24 @@ Build-Depends: debhelper (>= 10),
                dh-autoreconf,
                python-all-dev,
                at-spi2-core,
-               cli-common-dev (>= 0.8~) [!arm64 !ppc64el],
+               cli-common-dev (>= 0.8~) [amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64],
                gobject-introspection,
                intltool,
                gtk-doc-tools,
                libxml2-utils,
-               libnunit-cil-dev [!arm64 !ppc64el],
+               libnunit-cil-dev [amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64],
                dbus-test-runner,
                xvfb,
                valac,
                mate-common,
-               mono-devel (>= 2.4.3) [!arm64 !ppc64el],
+               mono-devel (>= 2.4.3) [amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64],
                libglib2.0-dev (>= 2.35.4),
                libgtk-3-dev (>= 2.91.3),
                libgtk2.0-dev (>= 2.12.0),
                python-gtk2-dev,
                procps,
-               gtk-sharp2-gapi [!arm64 !ppc64el],
-               libgtk2.0-cil-dev [!arm64 !ppc64el],
+               gtk-sharp2-gapi [amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64],
+               libgtk2.0-cil-dev [amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64]
                libdbus-glib-1-dev (>= 0.82),
                libayatana-indicator-dev (>= 0.6.0-0~),
                libayatana-indicator3-dev (>= 0.6.0-0~),
@@ -148,7 +148,7 @@ Description: Typelib files for libayatana-appindicator3-1 (GTK3 version)
 
 Package: libayatana-appindicator0.1-cil
 Section: cli-mono
-Architecture: all
+Architecture: amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          ${cli:Depends},
@@ -160,7 +160,7 @@ Description: CLI bindings for libayatana-appindicator
 
 Package: libayatana-appindicator0.1-cil-dev
 Section: cli-mono
-Architecture: all
+Architecture: amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          ${cli:Depends},
