--- a/debian/control
+++ b/debian/control
@@ -49,37 +49,36 @@ Depends: ${shlibs:Depends},
          libayatana-appindicator1 (= ${binary:Version}),
          python-gobject,
 Provides: ${python:Provides},
-Description: Python bindings for libayatana-appindicator (GTK2 version)
+Description: Python bindings for libayatana-appindicator (GTK-2+ version)
  A library and indicator to take menus from applications and place them in
  the panel.
  .
- This package provides Python bindings so that you can use
- libayatana-appindicator from a Python program.
+ This package provides Python (v2) bindings against python-gtk2 so that
+ you can use libayatana-appindicator from a Python program.
 
 Package: libayatana-appindicator1
-Section: libs
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
 Recommends: ayatana-indicator-application (>= 0.2.93),
-Description: Ayatana Application Indicators (GTK2 version)
+Description: Ayatana Application Indicators (GTK-2+ version)
  A library and indicator to take menus from applications and place them in
  the panel.
  .
  This package contains shared libraries to be used by applications compiled
- against GTK2.
+ against GTK-2+.
 
 Package: gir1.2-ayatanaappindicator-0.1
 Section: introspection
 Architecture: any
 Depends: ${misc:Depends},
          ${gir:Depends},
-Description: Typelib files for libayatana-appindicator1 (GTK2 version).
+Description: Typelib files for libayatana-appindicator1 (GTK-2+ version)
  A library and indicator to take menus from applications and place them in
  the panel.
  .
  This package can be used by other packages using the GIRepository format
- to generate dynamic bindings (GTK2 version).
+ to generate dynamic bindings (GTK-2+ version).
 
 Package: libayatana-appindicator-dev
 Section: libdevel
@@ -90,35 +89,34 @@ Depends: ${shlibs:Depends},
          libdbusmenu-glib-dev (>= 0.1.8),
          libdbus-glib-1-dev (>= 0.76),
          libayatana-appindicator1 (= ${binary:Version}),
-Description: Ayatana Application Indicators (development files, GTK2 version)
+Description: Ayatana Application Indicators (development files, GTK-2+ version)
  A library and indicator to take menus from applications and place them in
  the panel.
  .
- This package contains files that are needed to build applications (GTK2
- version).
+ This package contains files that are needed to build applications
+ (GTK-2+ version).
 
 Package: libayatana-appindicator-doc
 Section: doc
 Architecture: all
 Depends: ${misc:Depends},
-Description:  Ayatana Application Indicators (documentation files, GTK2 version)
+Description: Ayatana Application Indicators (documentation files, GTK-2+ version)
  A library and indicator to take menus from applications and place them in
  the panel.
  .
- This package contains developer documentation (GTK2 version).
+ This package contains developer documentation (GTK-2+ version).
 
 Package: libayatana-appindicator3-1
-Section: libs
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
 Recommends: ayatana-indicator-application (>= 0.2.93),
-Description: Ayatana Application Indicators (GTK3 version)
+Description: Ayatana Application Indicators (GTK-3+ version)
  A library and indicator to take menus from applications and place them in
  the panel.
  .
  This package contains shared libraries to be used by applications compiled
- against GTK3.
+ against GTK-3+.
 
 Package: libayatana-appindicator3-dev
 Section: libdevel
@@ -129,24 +127,24 @@ Depends: ${shlibs:Depends},
          libdbusmenu-glib-dev (>= 0.1.8),
          libdbus-glib-1-dev (>= 0.76),
          libayatana-appindicator3-1 (= ${binary:Version}),
-Description: Ayatana Application Indicators (development files, GTK3 version)
+Description: Ayatana Application Indicators (development files, GTK-3+ version)
  A library and indicator to take menus from applications and place them in
  the panel.
  .
- This package contains files that are needed to build applications (GTK3
- version).
+ This package contains files that are needed to build applications
+ (GTK-3+ version).
 
 Package: gir1.2-ayatanaappindicator3-0.1
 Section: introspection
 Architecture: any
 Depends: ${misc:Depends},
          ${gir:Depends},
-Description: Typelib files for libayatana-appindicator3-1 (GTK3 version)
+Description: Typelib files for libayatana-appindicator3-1 (GTK-3+ version)
  A library and indicator to take menus from applications and place them in
  the panel.
  .
  This package can be used by other packages using the GIRepository format
- to generate dynamic bindings (GTK3 version).
+ to generate dynamic bindings (GTK-3+ version).
 
 Package: libayatana-appindicator0.1-cil
 Section: cli-mono
@@ -158,7 +156,7 @@ Description: CLI bindings for libayatana-appindicator
  This package provides the appindicator-sharp assembly that allows CLI (.NET)
  programs to take menus from applications and place them in the panel.
  .
- This package contains assemblies to be used by applications.
+ This package contains assemblies to be used by Mono applications.
 
 Package: libayatana-appindicator0.1-cil-dev
 Section: cli-mono
@@ -167,8 +165,8 @@ Depends: ${shlibs:Depends},
          ${misc:Depends},
          ${cli:Depends},
          libayatana-appindicator0.1-cil (= ${binary:Version}),
-Description: Application Indicators
+Description: Ayatana Application Indicators for Mono
  A library and indicator to take menus from applications and place them in
  the panel.
  .
- This package contains files that are needed to build applications.
+ This package contains files that are needed to build Mono applications.
