--- a/debian/control
+++ b/debian/control
@@ -36,8 +36,8 @@ Build-Depends: debhelper (>= 9),
                libgirepository1.0-dev,
 Standards-Version: 4.1.1 
 Homepage: https://github.com/AyatanaIndicators/libayatana-appindicator
-Vcs-Git: git://cgit.arctica-project.org/ayatana/libayatana-appindicator.git
-Vcs-Browser: https://cgit.arctica-project.org/ayatana/libayatana-appindicator.git/
+Vcs-Git: https://github.com/AyatanaIndicators/libayatana-appindicator
+Vcs-Browser: https://github.com/AyatanaIndicators/libayatana-appindicator
 
 Package: python-ayatana-appindicator
 Section: python
