--- a/debian/control
+++ b/debian/control
@@ -84,6 +84,7 @@ Section: libdevel
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
+         libgtk2.0-dev,
          gir1.2-ayatanaappindicator-0.1 (= ${binary:Version}),
          libdbusmenu-glib-dev (>= 0.1.8),
          libdbus-glib-1-dev (>= 0.76),
@@ -121,6 +122,7 @@ Section: libdevel
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
+         libgtk-3-dev,
          gir1.2-ayatanaappindicator3-0.1 (= ${binary:Version}),
          libdbusmenu-glib-dev (>= 0.1.8),
          libdbus-glib-1-dev (>= 0.76),
