--- a/debian/control
+++ b/debian/control
@@ -31,7 +31,8 @@ Build-Depends: debhelper (>= 9),
                libdbusmenu-gtk-dev (>= 0.5.90),
                libdbusmenu-gtk3-dev (>= 0.5.90),
                libgirepository1.0-dev,
-Standards-Version: 4.1.1 
+Standards-Version: 4.5.0
+Rules-Requires-Root: no
 Homepage: https://github.com/AyatanaIndicators/libayatana-appindicator
 Vcs-Git: https://github.com/AyatanaIndicators/libayatana-appindicator
 Vcs-Browser: https://github.com/AyatanaIndicators/libayatana-appindicator
