--- a/debian/rules
+++ b/debian/rules
@@ -65,7 +65,7 @@ override_dh_auto_test: $(FLAVORS:%=dotest-%)
 
 dotest-%:
 	mkdir -p $(CURDIR)/debian/tmphome
-	export HOME=$(CURDIR)/debian/tmphome && dh_auto_test dh_auto_test --builddirectory=build/$* -- || true
+	export HOME=$(CURDIR)/debian/tmphome && dh_auto_test --builddirectory=build/$* -- || true
 	# View test's log file for better debugging of problems when built in clean chroots.
 	if [ -e build/$*/tests/test-suite.log ]; then cat build/$*/tests/test-suite.log; fi
 	rm -Rf $(CURDIR)/debian/tmphome
