Add support for tooltips
An icon, title and text body may be set independently or at once resulting in a
single signal.  Markup in the text body is not supported for simplicity.

--- a/bindings/vala/examples/CMakeLists.txt
+++ b/bindings/vala/examples/CMakeLists.txt
@@ -12,6 +12,7 @@ add_custom_command(
     --vapidir=${CMAKE_BINARY_DIR}/bindings/vala
     -C ayatana-indicator-example.vala
     --metadatadir "${CMAKE_SOURCE_DIR}/src"
+    --includedir="${CMAKE_BINARY_DIR}/src"
     --directory=${CMAKE_CURRENT_BINARY_DIR}
 )
 
