--- a/debian/rules
+++ b/debian/rules
@@ -64,11 +64,11 @@ override_dh_install:
 override_dh_auto_test: $(FLAVORS:%=dotest-%)
 
 dotest-%:
-	mkdir -p $(CURDIR)/debian/tmphome/.cache
-	export HOME=$(CURDIR)/debian/tmphome && export XDG_CACHE_HOME=$(CURDIR)/debian/tmphome/.cache && dh_auto_test --builddirectory=build/$* -- || true
+	mkdir -p $(CURDIR)/debian/tmphome-$*
+	export HOME=$(CURDIR)/debian/tmphome-$* && dh_auto_test --no-parallel --builddirectory=build/$*
 	# View test's log file for better debugging of problems when built in clean chroots.
 	if [ -e build/$*/tests/test-suite.log ]; then cat build/$*/tests/test-suite.log; fi
-	rm -Rf $(CURDIR)/debian/tmphome
+	rm -Rf $(CURDIR)/debian/tmphome-$*
 
 override_dh_auto_clean:
 	dh_auto_clean
