--- a/.build.yml
+++ b/.build.yml
@@ -45,6 +45,7 @@ requires:
     - libgtk2.0-dev
     - gtk-sharp2-gapi
     - libgtk2.0-cil-dev
+    - libgtk3.0-cil-dev
     - libdbus-glib-1-dev
     - libdbusmenu-glib-dev
     - libdbusmenu-gtk3-dev
@@ -75,6 +76,7 @@ requires:
     - libgtk2.0-dev
     - gtk-sharp2-gapi
     - libgtk2.0-cil-dev
+    - libgtk3.0-cil-dev
     - libdbus-glib-1-dev
     - libdbusmenu-glib-dev
     - libdbusmenu-gtk3-dev
