--- a/.build.yml
+++ b/.build.yml
@@ -46,6 +46,7 @@ requires:
     - gtk-sharp2-gapi
     - libgtk2.0-cil-dev
     - libgtk3.0-cil-dev
+    - gtk-sharp3-gapi
     - libdbus-glib-1-dev
     - libdbusmenu-glib-dev
     - libdbusmenu-gtk3-dev
@@ -77,6 +78,7 @@ requires:
     - gtk-sharp2-gapi
     - libgtk2.0-cil-dev
     - libgtk3.0-cil-dev
+    - gtk-sharp3-gapi
     - libdbus-glib-1-dev
     - libdbusmenu-glib-dev
     - libdbusmenu-gtk3-dev
