--- a/.build.yml
+++ b/.build.yml
@@ -47,6 +47,7 @@ requires:
     - libgtk2.0-cil-dev
     - libgtk3.0-cil-dev
     - gtk-sharp3-gapi
+    - libdbus-1-dev
     - libdbus-glib-1-dev
     - libdbusmenu-glib-dev
     - libdbusmenu-gtk3-dev
@@ -79,6 +80,7 @@ requires:
     - libgtk2.0-cil-dev
     - libgtk3.0-cil-dev
     - gtk-sharp3-gapi
+    - libdbus-1-dev
     - libdbus-glib-1-dev
     - libdbusmenu-glib-dev
     - libdbusmenu-gtk3-dev
