--- a/bindings/mono/app-indicator.sources.xml.in
+++ b/bindings/mono/app-indicator.sources.xml.in
@@ -1,6 +1,6 @@
 <gapi-parser-input>
-    <api filename="libayatana-appindicator-api.raw">
-        <library name="ayatana-appindicator.dll">
+    <api filename="libayatana-appindicator3-api.raw">
+        <library name="ayatana-appindicator3.dll">
             <namespace name="AyatanaAppIndicator">
                 <file>@REL_SRC@src/app-indicator.c</file>
                 <file>@REL_BIN@src/app-indicator-enum-types.c</file>
