--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,8 @@ Priority: optional
 XS-Python-Version: all
 Maintainer: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
 Build-Depends: debhelper (>= 9),
-               dh-autoreconf,
+               cmake,
+               cmake-extras,
                dpkg-dev (>= 1.16.1.1),
                at-spi2-core,
                cli-common-dev (>= 0.8~) [amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64],
@@ -22,6 +23,8 @@ Build-Depends: debhelper (>= 9),
                libgtk-3-dev (>= 2.91.3),
                libgtk2.0-dev (>= 2.12.0),
                procps,
+               gtk-sharp3-gapi [amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64],
+               libgtk3.0-cil-dev [amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64],
                gtk-sharp2-gapi [amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64],
                libgtk2.0-cil-dev [amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64],
                libdbus-glib-1-dev (>= 0.82),
@@ -36,45 +39,45 @@ Homepage: https://github.com/AyatanaIndicators/libayatana-appindicator
 Vcs-Git: https://github.com/AyatanaIndicators/libayatana-appindicator
 Vcs-Browser: https://github.com/AyatanaIndicators/libayatana-appindicator
 
-Package: libayatana-appindicator1
-Architecture: any
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
-Description: Ayatana Application Indicators (GTK-2+ version)
- A library and indicator to take menus from applications and place them in
- the panel.
- .
- This package contains shared libraries to be used by applications compiled
- against GTK-2+.
+#Package: libayatana-appindicator1
+#Architecture: any
+#Depends: ${shlibs:Depends},
+#         ${misc:Depends},
+#Description: Ayatana Application Indicators (GTK-2+ version)
+# A library and indicator to take menus from applications and place them in
+# the panel.
+# .
+# This package contains shared libraries to be used by applications compiled
+# against GTK-2+.
 
-Package: gir1.2-ayatanaappindicator-0.1
-Section: introspection
-Architecture: any
-Depends: ${misc:Depends},
-         ${gir:Depends},
-Description: Typelib files for libayatana-appindicator1 (GTK-2+ version)
- A library and indicator to take menus from applications and place them in
- the panel.
- .
- This package can be used by other packages using the GIRepository format
- to generate dynamic bindings (GTK-2+ version).
+#Package: gir1.2-ayatanaappindicator-0.1
+#Section: introspection
+#Architecture: any
+#Depends: ${misc:Depends},
+#         ${gir:Depends},
+#Description: Typelib files for libayatana-appindicator1 (GTK-2+ version)
+# A library and indicator to take menus from applications and place them in
+# the panel.
+# .
+# This package can be used by other packages using the GIRepository format
+# to generate dynamic bindings (GTK-2+ version).
 
-Package: libayatana-appindicator-dev
-Section: libdevel
-Architecture: any
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
-         libgtk2.0-dev,
-         gir1.2-ayatanaappindicator-0.1 (= ${binary:Version}),
-         libdbusmenu-glib-dev (>= 0.1.8),
-         libdbus-glib-1-dev (>= 0.76),
-         libayatana-appindicator1 (= ${binary:Version}),
-Description: Ayatana Application Indicators (development files, GTK-2+ version)
- A library and indicator to take menus from applications and place them in
- the panel.
- .
- This package contains files that are needed to build applications
- (GTK-2+ version).
+#Package: libayatana-appindicator-dev
+#Section: libdevel
+#Architecture: any
+#Depends: ${shlibs:Depends},
+#         ${misc:Depends},
+#         libgtk2.0-dev,
+#         gir1.2-ayatanaappindicator-0.1 (= ${binary:Version}),
+#         libdbusmenu-glib-dev (>= 0.1.8),
+#         libdbus-glib-1-dev (>= 0.76),
+#         libayatana-appindicator1 (= ${binary:Version}),
+#Description: Ayatana Application Indicators (development files, GTK-2+ version)
+# A library and indicator to take menus from applications and place them in
+# the panel.
+# .
+# This package contains files that are needed to build applications
+# (GTK-2+ version).
 
 Package: libayatana-appindicator-doc
 Section: doc
@@ -126,27 +129,52 @@ Description: Typelib files for libayatana-appindicator3-1 (GTK-3+ version)
  This package can be used by other packages using the GIRepository format
  to generate dynamic bindings (GTK-3+ version).
 
-Package: libayatana-appindicator0.1-cil
+#Package: libayatana-appindicator0.1-cil
+#Section: cli-mono
+#Architecture: amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64
+#Depends: ${shlibs:Depends},
+#         ${misc:Depends},
+#         ${cli:Depends},
+#Description: CLI bindings for libayatana-appindicator
+# This package provides the appindicator-sharp assembly that allows CLI (.NET)
+# programs to take menus from applications and place them in the panel.
+# .
+# This package contains assemblies to be used by GTK-2+ Mono applications.
+
+#Package: libayatana-appindicator0.1-cil-dev
+#Section: cli-mono
+#Architecture: amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64
+#Depends: ${shlibs:Depends},
+#         ${misc:Depends},
+#         ${cli:Depends},
+#         libayatana-appindicator0.1-cil (= ${binary:Version}),
+#Description: Ayatana Application Indicators for Mono (GTK-2+ variant)
+# A library and indicator to take menus from applications and place them in
+# the panel.
+# .
+# This package contains files that are needed to build Mono applications.
+
+Package: libayatana-appindicator3-0.1-cil
 Section: cli-mono
 Architecture: amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          ${cli:Depends},
-Description: CLI bindings for libayatana-appindicator
+Description: CLI bindings for libayatana-appindicator3
  This package provides the appindicator-sharp assembly that allows CLI (.NET)
  programs to take menus from applications and place them in the panel.
  .
- This package contains assemblies to be used by Mono applications.
+ This package contains assemblies to be used by GTK-2+ Mono applications.
 
-Package: libayatana-appindicator0.1-cil-dev
+Package: libayatana-appindicator3-0.1-cil-dev
 Section: cli-mono
 Architecture: amd64 arm64 armel armhf i386 mipsel ppc64el s390x kfreebsd-amd64 kfreebsd-i386 powerpc ppc64
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          ${cli:Depends},
-         libayatana-appindicator0.1-cil (= ${binary:Version}),
-Description: Ayatana Application Indicators for Mono
+         libayatana-appindicator3-0.1-cil (= ${binary:Version}),
+Description: Ayatana Application Indicators for Mono (GTK-3+ variant)
  A library and indicator to take menus from applications and place them in
  the panel.
  .
- This package contains files that are needed to build Mono applications.
+ This package contains files that are needed to build GTK-3+ Mono applications.
