--- a/debian/rules
+++ b/debian/rules
@@ -65,17 +65,21 @@ override_dh_install:
 	#  dh_install -plibayatana-appindicator0.1-cil-dev --fail-missing --sourcedir=debian/tmp/gtk2; \
 	
 override_dh_auto_test:
-	mkdir -p $(CURDIR)/debian/tmphome-gtk2
+	mkdir -p $(CURDIR)/debian/tmphome-gtk2/.local/share
+	mkdir -p $(CURDIR)/debian/tmphome-gtk2/.cache
 	export HOME=$(CURDIR)/debian/tmphome-gtk2 \
 	    && export XDG_DATA_HOME=$(CURDIR)/debian/tmphome-gtk2/.local/share \
+	    && export XDG_CACHE_HOME=$(CURDIR)/debian/tmphome-gtk2/.cache \
 	    && dh_auto_test --no-parallel --builddirectory=build/gtk2
 	# View test's log file for better debugging of problems when built in clean chroots.
 	if [ -e build/gtk2/tests/test-suite.log ]; then cat build/gtk2/tests/test-suite.log; fi
 	rm -Rf $(CURDIR)/debian/tmphome-gtk2
 
-	mkdir -p $(CURDIR)/debian/tmphome-gtk3
+	mkdir -p $(CURDIR)/debian/tmphome-gtk3/.local/share
+	mkdir -p $(CURDIR)/debian/tmphome-gtk3/.cache
 	export HOME=$(CURDIR)/debian/tmphome-gtk3 \
 	    && export XDG_DATA_HOME=$(CURDIR)/debian/tmphome-gtk3/.local/share \
+	    && export XDG_CACHE_HOME=$(CURDIR)/debian/tmphome-gtk3/.cache \
 	    && dh_auto_test --no-parallel --builddirectory=build/gtk3
 	# View test's log file for better debugging of problems when built in clean chroots.
 	if [ -e build/gtk3/tests/test-suite.log ]; then cat build/gtk3/tests/test-suite.log; fi
