--- a/bindings/mono/app-indicator.sources.xml.in
+++ b/bindings/mono/app-indicator.sources.xml.in
@@ -1,6 +1,6 @@
 <gapi-parser-input>
-    <api filename="libayatana-appindicator3-api.raw">
-        <library name="ayatana-appindicator3.dll">
+    <api filename="lib@ayatana_appindicator_gtkver@-api.raw">
+        <library name="@ayatana_appindicator_gtkver@.dll">
             <namespace name="AyatanaAppIndicator">
                 <file>@REL_SRC@src/app-indicator.c</file>
                 <file>@REL_BIN@src/app-indicator-enum-types.c</file>
